picked background gradient

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   }
 
 body
-  {}
+  {
+  ; background-image : linear-gradient( #ffd200, #f7971e )
+  ; background-size : 100vh 100vw
+  /*; min-height : calc( 100vh - (2 * var( --line-height )) )*/
+
+  }
 
 h1
   { background : #000
